agrego efecto hover a menu

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
-                  <nav class="main-nav animated fadeInDown">
+                  <nav class="main-nav animated fadeInDown cl-effect-1">
                   <a href="index.html">HOME</a>
                   <a href="#intro">NOSOTROS</a>
                   <a href="#responsive">SERVICIOS</a>
